--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,13 +16,16 @@
     · Esi pasiryžusi/-ęs bent pusę dienos laiko skirti teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
     darbo dienomis (14-18 val.).
     · Puikiai kalbi ir rašai angliškai.
-    <div class="container">
-      <button (click)="openModal('registration')"  class="btn btn-success btn-rounded">Registruotis</button>
+    <div class="d-flex justify-content-center">
+      <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
     </div>
 
   </div>
 </div>
 <jw-modal id="registration">
-   <button class="button float-right"(click)="closeModal('registration')">x</button>
-  <app-registration></app-registration>
+  <div class="container-colored">
+    <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('registration')"><span
+      aria-hidden="true">&times;</span></button>
+    <app-registration></app-registration>
+  </div>
 </jw-modal>
