--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -6,3 +6,10 @@
   align-items: center;
 }
 
+.container-colored{
+  margin: auto;
+  width: 50%;
+  padding: 25px;
+  background: #EBEFF2;
+  border-radius: 25px;
+}
