--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -18,7 +18,7 @@ jw-modal {
 
     .jw-modal-body {
       padding: 20px;
-      background: #fff;
+      background: rgba(0, 0, 0, 0);
 
       /* margin exposes part of the modal background */
       margin: 40px;
