--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="container well">
   <h2 class="text-center">Registracija</h2>
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit(); registrationForm.reset()">
-    <div class="form-group">
+    <div class="form-group container-colored">
       <label for="name">Vardas, pavardė</label>
       <input
         type="text"
@@ -19,24 +19,25 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
-
-      <label for="email">Telefono numeris</label>
-
-      <label for="sel1"></label>
-      <select class="form-control" id="sel1">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-      </select>
-      <input
-        type="phoneNumber"
-        class="form-control"
-        id="phoneNumber"
-        formControlName="phoneNumber"
-        maxlength="8"
-      />
+    <div class="form-group container-colored">
+      <label for="sel1">Telefono numeris</label>
+      <div class="row" id="sel1">
+        <div class="col-md-3 pr-0">
+          <select formControlName="phoneCode" class="form-control inline">
+            <option   [value]="name.dial_code" *ngFor="let name of arrCodes">{{name.code + " | " + name.dial_code}}</option>
+          </select>
+        </div>
+        <div class="col-md-9 pl-0"
+        >
+          <input
+            type="phoneNumber"
+            class="form-control inline"
+            id="phoneNumber"
+            formControlName="phoneNumber"
+            maxlength="8"
+          />
+        </div>
+      </div>
       <div
         [hidden]="registrationForm.controls.phoneNumber.valid || registrationForm.controls.phoneNumber.pristine"
         class="alert alert-danger"
@@ -57,7 +58,7 @@
       </div>
     </div>
 
-    <div class="form-group">
+    <div class="form-group container-colored">
       <label for="email">Elektroninis paštas</label>
       <input
         type="email"
@@ -78,109 +79,118 @@
         </div>
       </div>
     </div>
-    <label for="school">Mokymosi įstaiga, kurioje šiuo metu mokaisi</label>
-    <input
-      type="text"
-      class="form-control"
-      id="school"
-      formControlName="schoolName"
-      maxlength="80"
-    />
-    <div
-      [hidden]="registrationForm.controls.schoolName.valid || registrationForm.controls.schoolName.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.schoolName.errors?.required">
-        Šis laukas privalomas
+    <div class="form-group container-colored">
+      <label for="school">Mokymosi įstaiga, kurioje šiuo metu mokaisi</label>
+      <input
+        type="text"
+        class="form-control"
+        id="school"
+        formControlName="schoolName"
+        maxlength="80"
+      />
+      <div
+        [hidden]="registrationForm.controls.schoolName.valid || registrationForm.controls.schoolName.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="registrationForm.controls.schoolName.errors?.required">
+          Šis laukas privalomas
+        </div>
       </div>
     </div>
-
-    <label for="hobbies">Ką veiki kai nesimokai? Kokie tavo pomėgiai?</label>
-    <input
-      type="text"
-      class="form-control"
-      id="hobbies"
-      formControlName="hobbies"
-      maxlength="1500"
-    />
-    <div
-      [hidden]="registrationForm.controls.hobbies.valid || registrationForm.controls.hobbies.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.hobbies.errors?.required">
-        Šis laukas privalomas
+    <div class="form-group container-colored">
+      <label for="hobbies">Ką veiki kai nesimokai? Kokie tavo pomėgiai?</label>
+      <textarea
+        rows="5"
+        type="text"
+        class="form-control scroll resize"
+        id="hobbies"
+        formControlName="hobbies"
+        maxlength="1500"
+      ></textarea>
+      <div
+        [hidden]="registrationForm.controls.hobbies.valid || registrationForm.controls.hobbies.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="registrationForm.controls.hobbies.errors?.required">
+          Šis laukas privalomas
+        </div>
       </div>
     </div>
-    <label for="contract">Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau</label>
-    <input
-      type="text"
-      class="form-control"
-      id="contract"
-      formControlName="contract"
-      maxlength="1500"
-    />
-    <div
-      [hidden]="registrationForm.controls.contract.valid || registrationForm.controls.contract.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.contract.errors?.required">
-        Šis laukas privalomas
+    <div class="form-group container-colored">
+      <label>Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau</label>
+      <p><input type="checkbox" formControlName="contract"> Taip</p>
+      <textarea
+        rows="5"
+        type="text"
+        class="form-control scroll resize"
+        formControlName="contractDescription"
+        maxlength="1500"
+      ></textarea>
+    </div>
+    <div class="form-group container-colored">
+      <label>Numatytas praktikos laikas darbo dienomis 14-18 val. Ar galėsi akademijai skirti tiek
+        laiko?</label>
+      <p><input type="checkbox" formControlName="workTime"> Taip</p>
+    </div>
+    <div class="form-group container-colored">
+      <label for="drive">Kodėl nori dalyvauti IT akademijoje? Kas tave „veža“ joje dalyvauti?</label>
+      <textarea
+        rows="5"
+        type="text"
+        class="form-control scroll resize"
+        id="drive"
+        formControlName="drive"
+        maxlength="1500"
+      ></textarea>
+      <div
+        [hidden]="registrationForm.controls.drive.valid || registrationForm.controls.drive.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="registrationForm.controls.drive.errors?.required">
+          Šis laukas privalomas
+        </div>
       </div>
     </div>
-    <label>Numatytas praktikos laikas darbo dienomis 14-18 val. Ar galėsi akademijai skirti tiek
-      laiko?</label>
-
-
-    <label for="drive">Kodėl nori dalyvauti IT akademijoje? Kas tave „veža“ joje dalyvauti?</label>
-    <input
-      type="text"
-      class="form-control"
-      id="drive"
-      formControlName="drive"
-      maxlength="1500"
-    />
-    <div
-      [hidden]="registrationForm.controls.drive.valid || registrationForm.controls.drive.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.drive.errors?.required">
-        Šis laukas privalomas
+    <div class="form-group container-colored">
+      <label for="experience">Kokios technologijos tau labiausiai patinka ir su kokiomis iš jų jau turi patirties? Jei
+        teko dirbti prie konkretaus projekto, pasidalink jo nuoroda</label>
+      <textarea
+        rows="5"
+        type="text"
+        class="form-control scroll resize"
+        id="experience"
+        formControlName="experience"
+        maxlength="1500"
+      ></textarea>
+      <div
+        [hidden]="registrationForm.controls.experience.valid || registrationForm.controls.experience.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="registrationForm.controls.experience.errors?.required">
+          Šis laukas privalomas
+        </div>
       </div>
     </div>
-    <label for="experience">Kokios technologijos tau labiausiai patinka ir su kokiomis iš jų jau turi patirties? Jei
-      teko dirbti prie konkretaus projekto, pasidalink jo nuoroda</label>
-    <input
-      type="text"
-      class="form-control"
-      id="experience"
-      formControlName="experience"
-      maxlength="1500"
-    />
-    <div
-      [hidden]="registrationForm.controls.experience.valid || registrationForm.controls.experience.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.experience.errors?.required">
-        Šis laukas privalomas
+    <div class="form-group container-colored">
+      <label for="fromWhere"> Iš kur sužinojai apie IT akademiją?</label>
+      <textarea
+        rows="5"
+        type="text"
+        class="form-control scroll resize"
+        id="fromWhere"
+        formControlName="fromWhere"
+        maxlength="1500"
+      ></textarea>
+      <div
+        [hidden]="registrationForm.controls.fromWhere.valid || registrationForm.controls.fromWhere.pristine"
+        class="alert alert-danger"
+      >
+        <div *ngIf="registrationForm.controls.fromWhere.errors?.required">
+          Šis laukas privalomas
+        </div>
       </div>
     </div>
-    <label for="fromWhere"> Iš kur sužinojai apie IT akademiją?</label>
-    <input
-      type="text"
-      class="form-control"
-      id="fromWhere"
-      formControlName="fromWhere"
-      maxlength="1500"
-    />
-    <div
-      [hidden]="registrationForm.controls.fromWhere.valid || registrationForm.controls.fromWhere.pristine"
-      class="alert alert-danger"
-    >
-      <div *ngIf="registrationForm.controls.fromWhere.errors?.required">
-        Šis laukas privalomas
-      </div>
-    </div>
-    <div class="form-group">
+    <div class="form-group container-colored">
       <label for="password1">Slaptažodis</label>
       <input
         type="password"
@@ -190,20 +200,19 @@
       />
       <div
         [hidden]="registrationForm.controls.passwordReg.valid || registrationForm.controls.passwordReg.pristine"
-        class="alert alert-danger"
-      >
+        class="alert alert-danger">
         <div *ngIf="registrationForm.controls.passwordReg.errors?.required">
-          Password is required
+          Šis laukas yra privalomas
         </div>
         <div *ngIf="registrationForm.controls.passwordReg.errors?.minlength">
-          Password needs to be longer than 3 symbols
+          Slaptažodis privalo būti ilgesnis nei 7 symboliai
         </div>
         <div *ngIf="registrationForm.controls.passwordReg.errors?.maxlength">
-          Password needs to be less than 30 symbols
+          Slaptažodis privalo būti trumpesnis nei 30 symbolių
         </div>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group container-colored">
       <label for="password2">Pakartoti slaptažodį</label>
       <input
         type="password"
@@ -216,20 +225,18 @@
         class="alert alert-danger"
       >
         <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.required">
-          Password is required
+          Šis laukas yra privalomas
         </div>
         <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.minlength">
-          Password needs to be longer than 3 symbols
+          Slaptažodis privalo būti ilgesnis nei 7 symboliai
         </div>
         <div *ngIf="registrationForm.controls.passwordRepeatReg.errors?.maxlength">
-          Password needs to be less than 30 symbols
+          Slaptažodis privalo būti trumpesnis nei 30 symbolių
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-2">
-        <button type="submit" class="btn btn-success" [disabled]="!registrationForm.valid">Register</button>
-      </div>
+    <div class="d-flex justify-content-center">
+      <button type="submit" class="btn btn-success" [disabled]="!registrationForm.valid">Registruotis</button>
     </div>
   </form>
 </div>
