started to create home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,6 @@
-<footer>
-  <H1>footer</H1>
+<footer id="site-footer">
+  <a class="container">
+    <H4 style="color: #5471BA;">IT Akademija</H4>
+    <p> Email: itakademija@akademija.lt</p>
+  </a>
 </footer>
