--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,25 +1,38 @@
 <div class="jumbotron vertical-center">
   <div class="container">
-    „IT Akademija“ – tai dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
-    departamente. Ši programa skirta ne tik informacinių technologijų ar susijusių specialybių studentams, tačiau ir
-    tiems, kurie sieja savo ateitį su IT sritimi ir jau dabar tobulina savo techninius sugebėjimus.
-    Šios programos metu dalyviai mokosi programavimo, duomenų analizės, informacinių sistemų priežiūros ir testavimo,
-    komandinio darbo naudojant banko specifines technologijas, procesus ir praktikas, darbo su duomenimis. IT Akademijos
-    studentai turi galimybę išbandyti ir save atrasti skirtingose IT srityse ir praktikos pabaigoje pasirinkti norimą
-    stažuotės kryptį. Stažuotojai drauge su mūsų IT profesionalais įgyvendina realius IT projektus pasirinktose rolėse
-    bei užtvirtina įvairiapuses kompetencijas.
-    Prisijunk, jeigu tu:
-    · Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje.
-    · Ateityje nori būti įvairiapusis IT specialistas, kuris sugeba ne tik programuoti.
-    · Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimus – savo malonumui programuoji, kuri puslapius
-    ar programėles, padedi draugams spręsti technines problemas.
-    · Esi pasiryžusi/-ęs bent pusę dienos laiko skirti teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
-    darbo dienomis (14-18 val.).
-    · Puikiai kalbi ir rašai angliškai.
+    <img src="23.jpg">
+    <div class="container">
+      <div class="container-text">
+          „IT Akademija“ – tai dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
+          departamente. Ši programa skirta ne tik informacinių technologijų ar susijusių specialybių studentams, tačiau ir
+          tiems, kurie sieja savo ateitį su IT sritimi ir jau dabar tobulina savo techninius sugebėjimus.<br>
+          Šios programos metu dalyviai mokosi programavimo, duomenų analizės, informacinių sistemų priežiūros ir testavimo,
+          komandinio darbo naudojant banko specifines technologijas, procesus ir praktikas, darbo su duomenimis. IT Akademijos
+          studentai turi galimybę išbandyti ir save atrasti skirtingose IT srityse ir praktikos pabaigoje pasirinkti norimą
+          stažuotės kryptį. Stažuotojai drauge su mūsų IT profesionalais įgyvendina realius IT projektus pasirinktose rolėse
+          bei užtvirtina įvairiapuses kompestencijas.<br>
+      </div>
+      <br>
+      <br>
+      <div class="prisijunk"><b>Prisijunk, jeigu tu:</b><br></div>
+      <br>
+      <div class="container-text2">
+        <br>
+        · Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje.<br>
+        · Ateityje nori būti įvairiapusis IT specialistas, kuris sugeba ne tik programuoti.<br>
+        · Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimus – savo malonumui programuoji, kuri puslapius
+        ar programėles, padedi draugams spręsti technines problemas.<br>
+        · Esi pasiryžusi/-ęs bent pusę dienos laiko skirti teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
+        darbo dienomis (14-18 val.).<br>
+        · Puikiai kalbi ir rašai angliškai.<br>
+        <br>
+      </div>
+      <br>
+      <br>
     <div class="d-flex justify-content-center">
       <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
     </div>
-
+    </div>
   </div>
 </div>
 <jw-modal id="registration">
