--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -4,6 +4,9 @@
 
   display: flex;
   align-items: center;
+
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: white;
 }
 
 .container-colored{
@@ -12,4 +15,23 @@
   padding: 25px;
   background: #EBEFF2;
   border-radius: 25px;
+}
+
+
+.container-text{
+  color: #5471BA;
+  font-size: 20px;
+  text-align: justify;
+}
+
+.container-text2{
+  background-color: #b7c3e1;
+  font-size: 20px;
+  color: white;
+}
+
+.prisijunk{
+  text-align: center;
+  font-size: 24px;
+  color: #5471BA;
 }
