--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -11,7 +11,8 @@
 
 .container-colored{
   margin: auto;
-  width: 50%;
+  max-width: 850px;
+  min-width: 400px;
   padding: 25px;
   background: #EBEFF2;
   border-radius: 25px;
