--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -8,7 +8,8 @@
 //to add padding to all blocks of input
 .container-colored{
   margin: auto;
-
+  max-width: 800px;
+  min-width: 300px;
   padding: 10px;
   background: rgba(235, 239, 242, 0);
   border-radius: 5px;
