--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -23,16 +23,24 @@
   color: #5471BA;
   font-size: 20px;
   text-align: justify;
+  line-height: 1.5;
+  letter-spacing: 1.5px;
 }
 
 .container-text2{
   background-color: #b7c3e1;
   font-size: 20px;
   color: white;
+  position:relative;
+  left:13%;
+  width:800px;
+  text-align: center;
+  line-height: 2;
+  font-weight: bold;
 }
 
 .prisijunk{
   text-align: center;
-  font-size: 24px;
+  font-size: 26px;
   color: #5471BA;
 }
