registration post working

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,5 +3,11 @@
     <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     IT Akademija
   </a>
-  <button type="button" class="btn btn-success btn-rounded">Prisijungti</button>
+
+
+  <div class="d-flex justify-content-right">
+    <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
+
+    <button type="button" class="btn btn-success btn-rounded">Prisijungti</button>
+  </div>
 </nav>
