--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,11 @@
-<div class="jumbotron vertical-center">
-  <div class="container">
-    <img src="23.jpg">
-    <div class="container">
+<div class="  jumbotron vertical-center">   
+  
+  
+
+    <div class="container"> 
+        <div class="d-flex justify-content-center">
+      <img  src="https://studyin.lt/wp-content/uploads/2018/08/432_50ff31a5fe0159e805be1427e2f392a8-718x320.jpg" allign="middle"></div>
+    
       <div class="container-text">
           „IT Akademija“ – tai dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
           departamente. Ši programa skirta ne tik informacinių technologijų ar susijusių specialybių studentams, tačiau ir
@@ -14,7 +18,7 @@
       </div>
       <br>
       <br>
-      <div class="prisijunk"><b>Prisijunk, jeigu tu:</b><br></div>
+      <div class=""><b>Prisijunk, jeigu tu:</b><br></div>
       <br>
       <div class="container-text2">
         <br>
@@ -33,12 +37,11 @@
       <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
     </div>
     </div>
-  </div>
 </div>
 <jw-modal id="registration">
   <div class="container-colored">
     <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('registration')"><span
       aria-hidden="true">&times;</span></button>
     <app-registration></app-registration>
-  </div>
+  </div> 
 </jw-modal>
