--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,15 @@
 <nav class="navbar navbar-light bg-light" id="site-header">
   <a class="navbar-brand" href="#">
-    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_123987360_stock-vector-graduation-cap-on-globe-icon-isolated-on-transparent-background-world-education-symbol-online-learni.html&psig=AOvVaw2hcFF4CbbaoE_rfYdeRjZX&ust=1584444676259000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIjb9MTynugCFQAAAAAdAAAAABAb" width="100" height="60"  alt="">
     IT Akademija
   </a>
-  <button type="button" class="btn btn-success btn-rounded">Prisijungti</button>
+  <button  (click)="openModal('login')" class="btn btn-success btn-rounded">Prisijungti</button>
+  <jw-modal id="login">
+    <div class="container-colored">
+      <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('login')"><span
+        aria-hidden="true">&times;</span></button>
+      <app-login></app-login>
+    </div> 
+  </jw-modal>
+  
 </nav>
