--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -18,6 +18,16 @@
   border-radius: 25px;
 }
 
+.container-image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+  width: 718px;
+  min-height: 390px;
+  height: auto;
+  transform: scale(1.3);
+  }
 
 .container-text{
   color: #5471BA;
@@ -25,6 +35,9 @@
   text-align: justify;
   line-height: 1.5;
   letter-spacing: 1.5px;
+  width: 920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container-text2{
@@ -32,15 +45,27 @@
   font-size: 20px;
   color: white;
   position:relative;
-  left:13%;
-  width:800px;
+  margin-left: auto;
+  margin-right: auto;
+  width:700px;
+  max-height: 400px;
   text-align: center;
   line-height: 2;
   font-weight: bold;
 }
 
-.prisijunk{
+.join{
   text-align: center;
   font-size: 26px;
   color: #5471BA;
+}
+
+.btn{
+  background: #5471BA;
+  font-size: 35px;
+  color: white;
+  border: 2px solid #435ea3;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
