--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,8 @@
 <div class="jumbotron vertical-center">
   <div class="container">
-    <img src="23.jpg">
-    <div class="container">
+    <div class="container-image">
+      <img src="https://studyin.lt/wp-content/uploads/2018/08/432_50ff31a5fe0159e805be1427e2f392a8-718x320.jpg">
+    </div>
       <div class="container-text">
           „IT Akademija“ – tai dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
           departamente. Ši programa skirta ne tik informacinių technologijų ar susijusių specialybių studentams, tačiau ir
@@ -14,7 +15,7 @@
       </div>
       <br>
       <br>
-      <div class="prisijunk"><b>Prisijunk, jeigu tu:</b><br></div>
+      <div class="join"><b>Prisijunk, jeigu tu:</b><br></div>
       <br>
       <div class="container-text2">
         · Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje.<br>
@@ -28,7 +29,8 @@
       </div>
       <br>
       <br>
-
+    <div class="d-flex justify-content-center">
+      <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
     </div>
   </div>
 </div>
