--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -25,12 +25,12 @@
         · Esi pasiryžusi/-ęs bent pusę dienos laiko skirti teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
         darbo dienomis (14-18 val.).<br>
         · Puikiai kalbi ir rašai angliškai.<br>
-        
+
       </div>
       <br>
       <br>
     <div class="d-flex justify-content-center">
-      <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
+      <button (click)="openModal('registration')" class="btn-xl btn-primary btn-rounded float-center">Registruotis</button>
     </div>
   </div>
 </div>
