--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer id="site-footer">
+<footer class="footer-custom" id="site-footer">
   <a class="container">
-    <H1 style="color: #5471BA;">IT Akademija</H1>
+    <H1 >IT Akademija</H1>
     <p> Email: itakademija@akademija.lt</p>
   </a>
 </footer>
