--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,9 @@
-#site-footer{
-    font-family: Arial, Helvetica, sans-serif;
-    background:  #f5f5ef;
-    text-indent: 50px;
+.footer-custom {
+  left: 0;
+  padding-left: 40px;
+  bottom: 0;
+  width: 100%;
+  background-color: #7bb6f5;
+  color: white;
+  text-align: left;
 }
