--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -41,6 +41,7 @@
 }
 
 .container-text2{
+  padding: 10px;
   background-color: #b7c3e1;
   font-size: 20px;
   color: white;
@@ -48,10 +49,11 @@
   margin-left: auto;
   margin-right: auto;
   width:700px;
-  max-height: 400px;
-  text-align: center;
+  max-height: 500px;
+  text-align: left;
   line-height: 2;
   font-weight: bold;
+  border-radius: 5px;
 }
 
 .join{
@@ -60,12 +62,10 @@
   color: #5471BA;
 }
 
-.btn{
-  background: #5471BA;
-  font-size: 35px;
-  color: white;
-  border: 2px solid #435ea3;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+.btn-xl {
+  width:50%;
+  height: 45px;
+  font-size: 28px;
+  font-family:"Helvetica";
+  border-radius: 5px;
 }
