--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -32,11 +32,19 @@
     <div class="d-flex justify-content-center">
       <button (click)="openModal('registration')" class="btn btn-success btn-rounded float-center">Registruotis</button>
     </div>
+
 </div>
 <jw-modal id="registration">
   <div class="container-colored">
     <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('registration')"><span
       aria-hidden="true">&times;</span></button>
     <app-registration></app-registration>
+  </div> 
+</jw-modal>
+<jw-modal id="login">
+  <div class="container-colored">
+    <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('login')"><span
+      aria-hidden="true">&times;</span></button>
+    <app-login></app-login>
   </div> 
 </jw-modal>
