--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -35,16 +35,16 @@
 
 </div>
 <jw-modal id="registration">
-  <div class="container-colored">
+  <div class="container-reg-colored">
     <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('registration')"><span
       aria-hidden="true">&times;</span></button>
     <app-registration></app-registration>
-  </div> 
+  </div>
 </jw-modal>
 <jw-modal id="login">
-  <div class="container-colored">
+  <div class="container-login-colored">
     <button type="button" class="close float-right" aria-label="Close" (click)="closeModal('login')"><span
       aria-hidden="true">&times;</span></button>
     <app-login></app-login>
-  </div> 
+  </div>
 </jw-modal>
