--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -6,7 +6,7 @@
   resize:none
 }
 //to add padding to all blocks of input
-.container-colored{
+.container-uncolored{
   margin: auto;
   max-width: 800px;
   min-width: 300px;
