--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,7 +1,9 @@
 <div class="container well">
-  <h2 class="text-center">Registracija</h2>
+  <div class="text-center">
+    <h1>Registracija</h1>
+  </div>
   <form [formGroup]="registrationForm" (ngSubmit)="onSubmit(); ">
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="name">Vardas, pavardė</label>
       <input
         type="text"
@@ -19,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="sel1">Telefono numeris</label>
       <div class="row" id="sel1">
         <div class="col-md-3 pr-0">
@@ -59,7 +61,7 @@
       </div>
     </div>
 
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="email">Elektroninis paštas</label>
       <input
         type="email"
@@ -80,7 +82,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="school">Mokymosi įstaiga, kurioje šiuo metu mokaisi</label>
       <input
         type="text"
@@ -98,7 +100,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="hobbies">Ką veiki kai nesimokai? Kokie tavo pomėgiai?</label>
       <textarea
         rows="5"
@@ -117,7 +119,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label>Ar bus galimybė pasirašyti trišalę praktikos sutartį, jei ne pakomentuok plačiau</label>
       <p><input type="checkbox" formControlName="contract"> Taip</p>
       <textarea
@@ -128,12 +130,12 @@
         maxlength="1500"
       ></textarea>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label>Numatytas praktikos laikas darbo dienomis 14-18 val. Ar galėsi akademijai skirti tiek
         laiko?</label>
       <p><input type="checkbox" formControlName="workTime"> Taip</p>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="drive">Kodėl nori dalyvauti IT akademijoje? Kas tave „veža“ joje dalyvauti?</label>
       <textarea
         rows="5"
@@ -152,7 +154,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="experience">Kokios technologijos tau labiausiai patinka ir su kokiomis iš jų jau turi patirties? Jei
         teko dirbti prie konkretaus projekto, pasidalink jo nuoroda</label>
       <textarea
@@ -172,7 +174,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="fromWhere"> Iš kur sužinojai apie IT akademiją?</label>
       <textarea
         rows="5"
@@ -191,7 +193,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="password1">Slaptažodis</label>
       <input
         type="password"
@@ -213,7 +215,7 @@
         </div>
       </div>
     </div>
-    <div class="form-group container-colored">
+    <div class="form-group container-uncolored">
       <label for="password2">Pakartoti slaptažodį</label>
       <input
         type="password"
