registration_messages implemented

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
     </a>
   </div>
   <ul class="nav navbar-nav navbar-right">
-    <div><button (click)="openModal('registration')" class="btn btn-success">Registruotis</button>
+    <div><button (click)="openModal('registration')" class="btn btn-success">Registruotis į IT akademiją</button>
     <button (click)="openModal('login')" type="button" class="btn btn-secondary">Prisijungti</button></div>
   </ul>
   </div>
