--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -9,12 +9,13 @@
   background-color: white;
 }
 
-.container-colored{
+
+.container-login-colored{
   margin: auto;
-  max-width: 850px;
+  max-width: 450px;
   min-width: 400px;
   padding: 25px;
-  background: #EBEFF2;
+  background: rgba(15, 213, 242, 0.9);
   border-radius: 25px;
 }
 
