--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -24,10 +24,7 @@
   margin-left: auto;
   margin-right: auto;
   object-fit: cover;
-  width: 718px;
-  min-height: 390px;
   height: auto;
-  transform: scale(1.3);
   }
 
 .container-text{
@@ -36,9 +33,7 @@
   text-align: justify;
   line-height: 1.5;
   letter-spacing: 1.5px;
-  width: 920px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 10px;
 }
 
 .container-text2{
@@ -66,7 +61,17 @@
 .btn-xl {
   width:50%;
   height: 45px;
-  font-size: 28px;
   font-family:"Helvetica";
   border-radius: 5px;
+  font-weight: bold;
+}
+
+.container-info{
+  float: left;
+  width: 720px;
+}
+
+.container-join{
+  float: right;
+  padding: 70px;
 }
