--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,6 @@
+<mat-toolbar color="primary"
+    ><i class="material-icons mr-1"> school </i>IT Academy
+    <div class="spacer"></div>
+    <button mat-raised-button (click)="openDialog()">Prisijungti</button>
+</mat-toolbar>
 
-
-
-<nav class="navbar navbar-dark bg-primary">
-  <div class="container-fluid">
-  <div class="navbar-header">
-    <a class="navbar-brand" href="#">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_123987360_stock-vector-graduation-cap-on-globe-icon-isolated-on-transparent-background-world-education-symbol-online-learni.html&psig=AOvVaw2hcFF4CbbaoE_rfYdeRjZX&ust=1584444676259000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIjb9MTynugCFQAAAAAdAAAAABAb" width="100" height="60"  alt="">
-    IT Akademija
-    </a>
-  </div>
-  <ul class="nav navbar-nav navbar-right">
-    <div>
-    <button (click)="openModal('login')" type="button" class="btn btn-secondary">Prisijungti</button></div>
-  </ul>
-  </div>
-</nav>
