--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,37 +1,54 @@
-<div class="jumbotron vertical-center">
-    <div class="container-info">
-      <div class="container-image">
-        <img src="https://z-p3-scontent.fvno1-1.fna.fbcdn.net/v/t1.15752-9/90292967_934391043646865_725670231153836032_n.jpg?_nc_cat=110&_nc_sid=b96e70&_nc_oc=AQmkHILhaMelZsrXtXJeWSQx7Hxn3jE5YnhShMoy2s1lxp5fU77hieJYHIZHAWxFMIU&_nc_ht=z-p3-scontent.fvno1-1.fna&oh=adfdec35d689ce9840ac584ba1ec19b3&oe=5E9636DD">
+<div class="mx-auto container-padding ">
+  <div class="container-image">
+    <img
+      src="https://z-p3-scontent.fvno1-1.fna.fbcdn.net/v/t1.15752-9/90292967_934391043646865_725670231153836032_n.jpg?_nc_cat=110&_nc_sid=b96e70&_nc_oc=AQmkHILhaMelZsrXtXJeWSQx7Hxn3jE5YnhShMoy2s1lxp5fU77hieJYHIZHAWxFMIU&_nc_ht=z-p3-scontent.fvno1-1.fna&oh=adfdec35d689ce9840ac584ba1ec19b3&oe=5E9636DD">
+  </div>
+  <div>
+    <div class="row">
+      <div class="column">
+        <mat-list>
+          <mat-list-item>
+            „IT Akademija“ yra dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT
+            departamente. Programa skirta IT ar susijusių specialybių studentams ir tiems, kas sieja savo ateitį su
+            IT.
+          </mat-list-item>
+          <mat-list-item><b>Programos dalyviai mokosi:</b></mat-list-item>
+          <mat-list-item> · programavimo</mat-list-item>
+          <mat-list-item> · duomenų analizės</mat-list-item>
+          <mat-list-item> · informacinių sistemų priežiūros</mat-list-item>
+          <mat-list-item> · testavimo</mat-list-item>
+          <mat-list-item> · komandinio darbo naudojant banko specifines technologijas, procesus ir praktikas
+          </mat-list-item>
+          <mat-list-item> · darbo su duomenimis</mat-list-item>
+          <mat-list-item>
+            IT Akademijos studentai turi galimybę pasirinkti norimą stažuotės kryptį kurso pabaigoje ir dirbti
+            su realiais IT projektais.
+          </mat-list-item>
+        </mat-list>
       </div>
-      <div class="container-text">
-        „IT Akademija“ yra dviejų dalių programa, kurią sudaro su studijomis suderinta praktika ir stažuotė mūsų IT 
-        departamente. Programa skirta IT ar susijusių specialybių studentams ir tiems, kas sieja savo ateitį su IT.<br>
-        Programos dalyviai mokosi:<br>
-        · programavimo<br>
-        · duomenų analizės<br>
-        · informacinių sistemų priežiūros<br>
-        · testavimo<br>
-        · komandinio darbo naudojant banko specifines technologijas, procesus ir praktikas<br>
-        · darbo su duomenimis<br>
-        IT Akademijos studentai turi galimybę pasirinkti norimą stažuotės kryptį kurso pabaigoje ir dirbti 
-        su realiais IT projektais.
+      <div class="column">
+        <mat-list>
+          <mat-list-item>
+            <p><b>Prisijunk, jeigu tu:</b></p>
+          </mat-list-item>
+          <mat-list-item> · Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje.
+          </mat-list-item>
+          <mat-list-item> · Ateityje nori būti įvairiapusis IT specialistas, kuris sugeba ne tik programuoti.
+          </mat-list-item>
+          <mat-list-item> · Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimu.</mat-list-item>
+          <mat-list-item> · Skirsi pusę dienos teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
+            darbo dienomis (14-18 val.).
+          </mat-list-item>
+          <mat-list-item>· Puikiai kalbi ir rašai angliškai.</mat-list-item>
+          <div class="d-flex justify-content-center">
+            <button (click)="openModal('registration')" class="btn-xl btn-primary btn-rounded float-center">
+              Registruotis
+            </button>
+          </div>
+        </mat-list>
       </div>
     </div>
-    <div class="container-join">
-      <div class="join"><b>Prisijunk, jeigu tu:</b><br></div>
-      <br>
-      <div class="container-text2">
-        · Sieki su IT susijusio išsilavinimo ar mėgini praktiškai atrasti save šioje srityje.<br>
-        · Ateityje nori būti įvairiapusis IT specialistas, kuris sugeba ne tik programuoti.<br>
-        · Degi noru tobulėti, rodai iniciatyvą ir jau turi bazinius gebėjimu.<br>
-        · Skirsi pusę dienos teorinėms ir praktinėms užduotims. Praktikai numatytas laikas yra
-          darbo dienomis (14-18 val.).<br>
-        · Puikiai kalbi ir rašai angliškai.<br>
-        <div class="d-flex justify-content-center">
-          <button (click)="openModal('registration')" class="btn-xl btn-primary btn-rounded float-center">Registruotis</button>
-        </div>
-      </div>
-    </div> 
+  </div>
 </div>
 <jw-modal id="registration">
   <app-registration></app-registration>
