adding responsive ui to home page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,4 @@
 <footer class="footer-custom" id="site-footer">
-  <a class="container">
-    <H1 >IT Akademija</H1>
-    <p> Email: itakademija@akademija.lt</p>
-  </a>
+  <div class="contact-info-header">IT Akademija</div>
+  <div class="contact-info"> Email: itakademija@akademija.lt</div>
 </footer>
