--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,7 +3,22 @@
   padding-left: 40px;
   bottom: 0;
   width: 100%;
-  background-color: #7bb6f5;
+  background-color: #5A7BB6;
   color: white;
   text-align: left;
+  height: 10vh;
+  font-family: 'Nunito', sans-serif;
+  margin: 0 auto;
+}
+
+.contact-info-header{
+  padding-top: 2vh;
+  font-size: 20px;
+  margin: 0 auto;
+}
+
+.contact-info{
+  padding-top: 0.5vh;
+  font-size: 16px;
+  margin: 0 auto;
 }
