--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,16 @@
 
 
 
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark header">
   <div class="container-fluid">
   <div class="navbar-header">
     <a class="navbar-brand" href="#">
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123rf.com%2Fphoto_123987360_stock-vector-graduation-cap-on-globe-icon-isolated-on-transparent-background-world-education-symbol-online-learni.html&psig=AOvVaw2hcFF4CbbaoE_rfYdeRjZX&ust=1584444676259000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIjb9MTynugCFQAAAAAdAAAAABAb" width="100" height="60"  alt="">
     IT Akademija
     </a>
   </div>
   <ul class="nav navbar-nav navbar-right">
     <div>
-    <button (click)="openModal('login')" type="button" class="btn btn-secondary">Prisijungti</button></div>
+    <button (click)="openModal('login')" type="button" class="menu-button btn">Prisijungti</button></div>
   </ul>
   </div>
 </nav>
