--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,11 @@
 #site-header{
     font-family: Arial, Helvetica, sans-serif;
-    background:  #f5f5ef;
+    background:  #5A7BB6;
+}
+
+.header{
+  min-height:5vh;
+  background: #6486C4;
 }
 
 .vertical-center {
@@ -36,10 +41,9 @@
     color: white;
   }
 
-  .prisijunk{
-    text-align: center;
-    font-size: 24px;
-    color: #5471BA;
+  .menu-button{
+    background: #6486C4;
+    color: white;
   }
 
 
