--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+  width:100vw;
+  overflow-x: hidden;
+}
+body{
+  position: relative;
+  background: #EEEEEE;
+  font-family: 'Nunito', sans-serif;
+  min-height: 100vh;
+}
 
 
