login modal clears when closed

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="form-group container-uncolored">
         <label for="emailLogin">Elektroninis paštas</label>
         <input
-          type="emailLogin"
+          type="email"
           class="form-control"
           id="emailLogin"
           placeholder="vardas@paštas.com"
