--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')"><span aria-hidden="true">&times;</span></button>
+    <button type="button" class="close float-right exit" aria-label="Close" (click)="closeDialog('login')">
+        <span aria-hidden="true">&times;</span>
+    </button>
     <mat-card-header>
         <h1 class="text-center">Prisijungimas</h1>
     </mat-card-header>
@@ -28,7 +30,13 @@
                 </div>
             </div>
             <mat-form-field class="example-full-width">
-                <input matInput placeholder="Slaptažodis" type="password" class ="form-control" formControlName="passwordLogin" />
+                <input
+                    matInput
+                    placeholder="Slaptažodis"
+                    type="password"
+                    class="form-control"
+                    formControlName="passwordLogin"
+                />
             </mat-form-field>
             <div
                 [hidden]="loginForm.controls.passwordLogin.valid || loginForm.controls.passwordLogin.pristine"
@@ -37,12 +45,18 @@
                 <div *ngIf="loginForm.controls.passwordLogin.errors?.required">
                     Slaptažodis yra privalomas
                 </div>
-                
             </div>
         </mat-card-content>
         <span class="align-bottom">
-        <button mat-stroked-button color="primary" type ="submit" class="btn-block mt-10" [disabled]="!loginForm.valid">Prisijungti</button></span>
-
-
+            <button
+                mat-stroked-button
+                color="primary"
+                type="submit"
+                class="btn-block mt-10"
+                [disabled]="!loginForm.valid"
+            >
+                Prisijungti
+            </button></span
+        >
     </form>
 </div>
